# cse341-node-prj2/routes/api-docs.json
@@ -8,7 +8,7 @@
   "host": "afternoon-island-68440.herokuapp.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/": {
@@ -49,7 +49,7 @@
     "/users/": {
       "get": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "parameters": [],
@@ -68,7 +68,7 @@
     "/users/{userId}": {
       "get": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "parameters": [
@@ -90,7 +90,7 @@
       },
       "delete": {
         "tags": [
-          "User"
+          "Users"
         ],
         "description": "",
         "parameters": [
